--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-ios-switch": "^0.1.19",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
